# Hooty

./: CMakeLists.txt
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  studentdetails.cpp
src/data/: danastudentquery.cpp  danastudentquery.h  dbhelper.h  istduentdataaccess.h  istudentquery.h  studentDataFactory.h  studentrepository.cpp  studentrepository.h
src/models/: student.h  studenthistory.h
src/ui/: main.cpp  mainwindow.cpp  mainwindow.h  studentdetails.h
